--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
     <div class="tab library">
 
         <div class="animation-show">
-            <img src="img/9.jpeg">
+            <img src="https://github.com/ryanmun/parallax-scrolling-task2/blob/main/9.jpeg?raw=true">
             <p>Mount Everest, Nepal/Tibet</p>
         </div>
         <div class="animation-show">
-            <img src="img/10.jpeg">
+            <img src="https://github.com/ryanmun/parallax-scrolling-task2/blob/main/10.jpeg?raw=true">
             <p>K2, Pakistan/China</p>
         </div>
         <div class="animation-show">
-            <img src="img/11.jpeg">
+            <img src="https://github.com/ryanmun/parallax-scrolling-task2/blob/main/11.jpeg?raw=true">
             <p>Mount Kilimanjaro, Tanzania</p>
         </div>
         <div class="animation-show">
-            <img src="img/12.jpeg">
+            <img src="https://github.com/ryanmun/parallax-scrolling-task2/blob/main/12.jpeg?raw=true">
             <p>Denali, USA</p>
         </div>
     </div>
